// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiNavDrawer is rendered 1`] = `
<nav
  class="euiNavDrawer euiNavDrawer-isCollapsed euiNavDrawer-flyoutIsCollapsed"
>
  <div
    class="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiNavDrawerMenu euiNavDrawerMenu-hasFooter"
        id="navDrawerMenu"
      >
        <ul
          class="euiListGroup euiListGroup-flush euiListGroup-maxWidthDefault euiNavDrawer__expandButton"
        >
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction navDrawerExpandButton-isCollapsed"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <button
                class="euiListGroupItem__button"
                data-test-subj="navDrawerExpandButton-isCollapsed"
                type="button"
              >
                <svg
                  class="euiListGroupItem__icon"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.986 7.382a.501.501 0 01.013.152c.014.4-.133.806-.439 1.112l-2.12 2.122a.5.5 0 11-.708-.708L13.792 8H1.5a.5.5 0 010-1h12.121l-1.889-1.89a.5.5 0 01.707-.706l2.121 2.12c.241.242.383.544.426.858zM1.5 3h7a.5.5 0 010 1h-7a.5.5 0 010-1zm0 8h7a.5.5 0 110 1h-7a.5.5 0 110-1z"
                  />
                </svg>
                <span
                  class="euiListGroupItem__label"
                >
                  Expand
                </span>
              </button>
            </span>
          </li>
        </ul>
        <ul
          class="euiListGroup euiListGroup-maxWidthDefault euiNavDrawerGroup"
        >
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <button
                aria-expanded="false"
                aria-label="Recently viewed"
                class="euiListGroupItem__button"
                data-name="Recently viewed"
                type="button"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="clock"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Recently viewed
                </span>
              </button>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <button
                aria-expanded="false"
                aria-label="Favorites"
                class="euiListGroupItem__button"
                data-name="Favorites"
                type="button"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="starEmpty"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Favorites
                </span>
              </button>
            </span>
          </li>
        </ul>
        <ul
          class="euiListGroup euiListGroup-maxWidthDefault euiNavDrawerGroup"
        >
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isActive euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Canvas"
                class="euiListGroupItem__button"
                data-name="Canvas"
                href="#"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="canvasApp"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Canvas
                </span>
              </a>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Discover"
                class="euiListGroupItem__button"
                data-name="Discover"
                href="#"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="discoverApp"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Discover
                </span>
              </a>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Visualize"
                class="euiListGroupItem__button"
                data-name="Visualize"
                href="#"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="visualizeApp"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Visualize
                </span>
              </a>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Dashboard"
                class="euiListGroupItem__button"
                data-name="Dashboard"
                href="#"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="dashboardApp"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Dashboard
                </span>
              </a>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Machine learning"
                class="euiListGroupItem__button"
                data-name="Machine learning"
                href="#"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="machineLearningApp"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Machine learning
                </span>
              </a>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Custom Plugin (no icon)"
                class="euiListGroupItem__button"
                data-name="Custom Plugin (no icon)"
                href="#"
              >
                <span
                  class="euiListGroupItem__icon euiNavDrawerGroup__itemDefaultIcon"
                >
                  CP
                </span>
                <span
                  class="euiListGroupItem__label"
                >
                  Custom Plugin (no icon)
                </span>
              </a>
            </span>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-labelledby="navDrawerFlyoutTitle"
      class="euiNavDrawerFlyout euiNavDrawerFlyout-isCollapsed"
      id="navDrawerFlyout"
    >
      <div
        class="euiTitle euiTitle--xxsmall euiNavDrawerFlyout__title"
        id="navDrawerFlyoutTitle"
        tabindex="-1"
      />
    </div>
  </div>
</nav>
`;

exports[`EuiNavDrawer renders with falsy children 1`] = `
<nav
  class="euiNavDrawer euiNavDrawer-isCollapsed euiNavDrawer-flyoutIsCollapsed"
>
  <div
    class="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiNavDrawerMenu euiNavDrawerMenu-hasFooter"
        id="navDrawerMenu"
      >
        <ul
          class="euiListGroup euiListGroup-flush euiListGroup-maxWidthDefault euiNavDrawer__expandButton"
        >
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction navDrawerExpandButton-isCollapsed"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <button
                class="euiListGroupItem__button"
                data-test-subj="navDrawerExpandButton-isCollapsed"
                type="button"
              >
                <svg
                  class="euiListGroupItem__icon"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.986 7.382a.501.501 0 01.013.152c.014.4-.133.806-.439 1.112l-2.12 2.122a.5.5 0 11-.708-.708L13.792 8H1.5a.5.5 0 010-1h12.121l-1.889-1.89a.5.5 0 01.707-.706l2.121 2.12c.241.242.383.544.426.858zM1.5 3h7a.5.5 0 010 1h-7a.5.5 0 010-1zm0 8h7a.5.5 0 110 1h-7a.5.5 0 110-1z"
                  />
                </svg>
                <span
                  class="euiListGroupItem__label"
                >
                  Expand
                </span>
              </button>
            </span>
          </li>
        </ul>
        <ul
          class="euiListGroup euiListGroup-maxWidthDefault euiNavDrawerGroup"
        >
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isActive euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Canvas"
                class="euiListGroupItem__button"
                data-name="Canvas"
                href="#"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="canvasApp"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Canvas
                </span>
              </a>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Discover"
                class="euiListGroupItem__button"
                data-name="Discover"
                href="#"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="discoverApp"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Discover
                </span>
              </a>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Visualize"
                class="euiListGroupItem__button"
                data-name="Visualize"
                href="#"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="visualizeApp"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Visualize
                </span>
              </a>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Dashboard"
                class="euiListGroupItem__button"
                data-name="Dashboard"
                href="#"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="dashboardApp"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Dashboard
                </span>
              </a>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Machine learning"
                class="euiListGroupItem__button"
                data-name="Machine learning"
                href="#"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="machineLearningApp"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Machine learning
                </span>
              </a>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Custom Plugin (no icon)"
                class="euiListGroupItem__button"
                data-name="Custom Plugin (no icon)"
                href="#"
              >
                <span
                  class="euiListGroupItem__icon euiNavDrawerGroup__itemDefaultIcon"
                >
                  CP
                </span>
                <span
                  class="euiListGroupItem__label"
                >
                  Custom Plugin (no icon)
                </span>
              </a>
            </span>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-labelledby="navDrawerFlyoutTitle"
      class="euiNavDrawerFlyout euiNavDrawerFlyout-isCollapsed"
      id="navDrawerFlyout"
    >
      <div
        class="euiTitle euiTitle--xxsmall euiNavDrawerFlyout__title"
        id="navDrawerFlyoutTitle"
        tabindex="-1"
      />
    </div>
  </div>
</nav>
`;

exports[`EuiNavDrawer renders with fragments 1`] = `
<nav
  class="euiNavDrawer euiNavDrawer-isCollapsed euiNavDrawer-flyoutIsCollapsed"
>
  <div
    class="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiNavDrawerMenu euiNavDrawerMenu-hasFooter"
        id="navDrawerMenu"
      >
        <ul
          class="euiListGroup euiListGroup-flush euiListGroup-maxWidthDefault euiNavDrawer__expandButton"
        >
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction navDrawerExpandButton-isCollapsed"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <button
                class="euiListGroupItem__button"
                data-test-subj="navDrawerExpandButton-isCollapsed"
                type="button"
              >
                <svg
                  class="euiListGroupItem__icon"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.986 7.382a.501.501 0 01.013.152c.014.4-.133.806-.439 1.112l-2.12 2.122a.5.5 0 11-.708-.708L13.792 8H1.5a.5.5 0 010-1h12.121l-1.889-1.89a.5.5 0 01.707-.706l2.121 2.12c.241.242.383.544.426.858zM1.5 3h7a.5.5 0 010 1h-7a.5.5 0 010-1zm0 8h7a.5.5 0 110 1h-7a.5.5 0 110-1z"
                  />
                </svg>
                <span
                  class="euiListGroupItem__label"
                >
                  Expand
                </span>
              </button>
            </span>
          </li>
        </ul>
        <ul
          class="euiListGroup euiListGroup-maxWidthDefault euiNavDrawerGroup"
        >
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <button
                aria-expanded="false"
                aria-label="Recently viewed"
                class="euiListGroupItem__button"
                data-name="Recently viewed"
                type="button"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="clock"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Recently viewed
                </span>
              </button>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <button
                aria-expanded="false"
                aria-label="Favorites"
                class="euiListGroupItem__button"
                data-name="Favorites"
                type="button"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="starEmpty"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Favorites
                </span>
              </button>
            </span>
          </li>
        </ul>
        <ul
          class="euiListGroup euiListGroup-maxWidthDefault euiNavDrawerGroup"
        >
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isActive euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Canvas"
                class="euiListGroupItem__button"
                data-name="Canvas"
                href="#"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="canvasApp"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Canvas
                </span>
              </a>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Discover"
                class="euiListGroupItem__button"
                data-name="Discover"
                href="#"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="discoverApp"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Discover
                </span>
              </a>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Visualize"
                class="euiListGroupItem__button"
                data-name="Visualize"
                href="#"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="visualizeApp"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Visualize
                </span>
              </a>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Dashboard"
                class="euiListGroupItem__button"
                data-name="Dashboard"
                href="#"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="dashboardApp"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Dashboard
                </span>
              </a>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Machine learning"
                class="euiListGroupItem__button"
                data-name="Machine learning"
                href="#"
              >
                <div
                  class="euiListGroupItem__icon"
                  data-euiicon-type="machineLearningApp"
                />
                <span
                  class="euiListGroupItem__label"
                >
                  Machine learning
                </span>
              </a>
            </span>
          </li>
          <li
            class="euiListGroupItem euiListGroupItem--small euiListGroupItem-isClickable euiListGroupItem-hasExtraAction euiNavDrawerGroup__item"
          >
            <span
              class="euiToolTipAnchor euiListGroupItem__tooltip"
            >
              <a
                aria-label="Custom Plugin (no icon)"
                class="euiListGroupItem__button"
                data-name="Custom Plugin (no icon)"
                href="#"
              >
                <span
                  class="euiListGroupItem__icon euiNavDrawerGroup__itemDefaultIcon"
                >
                  CP
                </span>
                <span
                  class="euiListGroupItem__label"
                >
                  Custom Plugin (no icon)
                </span>
              </a>
            </span>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-labelledby="navDrawerFlyoutTitle"
      class="euiNavDrawerFlyout euiNavDrawerFlyout-isCollapsed"
      id="navDrawerFlyout"
    >
      <div
        class="euiTitle euiTitle--xxsmall euiNavDrawerFlyout__title"
        id="navDrawerFlyoutTitle"
        tabindex="-1"
      />
    </div>
  </div>
</nav>
`;
